--- a/recipes-kernel/linux/linux-yocto/docker.cfg
+++ b/recipes-kernel/linux/linux-yocto/docker.cfg
@@ -1,11 +1,11 @@
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
-CONFIG_IP_NF_FILTER=m
+CONFIG_IP_NF_FILTER=y
 CONFIG_NF_NAT=m
 CONFIG_NF_CONNTRACK_IPV4=y
 
 CONFIG_DM_THIN_PROVISIONING=m
 
-
+CONFIG_VXLAN=m
 CONFIG_IP_NF_NAT=m
 CONFIG_IP_NF_TARGET_MASQUERADE=m
 
