--- a/recipes-kernel/linux/linux-yocto/docker.cfg
+++ b/recipes-kernel/linux/linux-yocto/docker.cfg
@@ -1,12 +1,53 @@
-CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
 CONFIG_IP_NF_FILTER=y
-CONFIG_NF_NAT=m
+CONFIG_NF_NAT=y
 CONFIG_NF_CONNTRACK_IPV4=y
 
 CONFIG_DM_THIN_PROVISIONING=m
 
-CONFIG_VXLAN=m
-CONFIG_IP_NF_NAT=m
+CONFIG_VXLAN=y
+CONFIG_IP_NF_NAT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=m
 
 CONFIG_OVERLAY_FS=y
+
+CONFIG_IPV6=y
+CONFIG_IP_NF_IPTABLES=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_NETFILTER=y
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+
+
+CONFIG_ADVISE_SYSCALLS=y
+CONFIG_MEMCG=y
+CONFIG_NAMESPACES=y
+CONFIG_NET_NS=y
+CONFIG_PID_NS=y
+CONFIG_IPC_NS=y
+CONFIG_UTS_NS=y
+CONFIG_CGROUPS=y
+CONFIG_CGROUP_CPUACCT=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CGROUP_FREEZER=y
+CONFIG_CGROUP_SCHED=y
+CONFIG_CPUSETS=y
+CONFIG_MACVLAN=y
+CONFIG_VETH=y
+CONFIG_BRIDGE=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_IP6_NF_FILTER=m
+CONFIG_IP_NF_TARGET_REJECT=m
+CONFIG_IP6_NF_TARGET_REJECT=m
+CONFIG_IP6_NF_TARGET_MASQUERADE=m
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NF_NAT_NEEDED=y
+CONFIG_POSIX_MQUEUE=y
+CONFIG_TUN=y
+CONFIG_BTRFS_FS=n
+CONFIG_BTRFS_FS_POSIX_ACL=n
+CONFIG_EXT4_FS=y
+CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT4_FS_SECURITY=y
+CONFIG_KEYS=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
