--- a/recipes-kernel/linux/linux-yocto/docker.cfg
+++ b/recipes-kernel/linux/linux-yocto/docker.cfg
@@ -9,14 +9,14 @@ CONFIG_IP_NF_NAT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=m
 
 CONFIG_OVERLAY_FS=y
-
+CONFIG_NETFILTER_XT_MATCH_IPVS=y
 CONFIG_IPV6=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NETFILTER=y
 CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 
-
+CONFIG_IP_VS=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMCG=y
 CONFIG_NAMESPACES=y
